Add RPCs and functions to further measure gRPC

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 helloworld/client/__pycache__
-
 helloworld/server/node_server/node_modules
+helloworld/client/helloworld_pb2_grpc.py
+helloworld/client/helloworld_pb2.py
+helloworld/client/long_string.txt
