Add some initial plots and test scripts for ghz

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ helloworld/server/node_server/node_modules
 helloworld/client/helloworld_pb2_grpc.py
 helloworld/client/helloworld_pb2.py
 helloworld/client/long_string.txt
+helloworld/client/long_array.txt
+helloworld/ghz.json
+helloworld/results.json
+helloworld/test.json
