--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-helloworld/client/python_client/__pycache__
-helloworld/server/node_server/node_modules
-helloworld/client/python_client/helloworld_pb2_grpc.py
-helloworld/client/python_client/helloworld_pb2.py
-helloworld/client/long_string.txt
-helloworld/client/long_array.txt
-helloworld/ghz.json
-helloworld/test.json
-helloworld/ghz
-helloworld/python_scripts/scheduler_scripts/input_file.txt
-helloworld/python_scripts/scheduler_scripts/execution_times.txt
-helloworld/python_scripts/scheduler_scripts/execution_times_scheduler.txt
-helloworld/python_scripts/scheduler_scripts/execution_times_scheduler_timeout.txt
+client/python_client/__pycache__
+server/node_server/node_modules
+client/python_client/helloworld_pb2_grpc.py
+client/python_client/helloworld_pb2.py
+client/long_string.txt
+client/long_array.txt
+ghz.json
+test.json
+ghz
+python_scripts/scheduler_scripts/input_file.txt
+python_scripts/scheduler_scripts/execution_times.txt
+python_scripts/scheduler_scripts/execution_times_scheduler.txt
+python_scripts/scheduler_scripts/execution_times_scheduler_timeout.txt
 .vscode
